--- a/EssentialUIKit/Views/Dashboard/StockOverviewPage.xaml
+++ b/EssentialUIKit/Views/Dashboard/StockOverviewPage.xaml
@@ -9,7 +9,6 @@
     xmlns:chart="clr-namespace:Syncfusion.SfChart.XForms;assembly=Syncfusion.SfChart.XForms"
     xmlns:controls="clr-namespace:EssentialUIKit.Controls"
     xmlns:converters="clr-namespace:EssentialUIKit.Converters"
-    xmlns:expander="clr-namespace:Syncfusion.XForms.Expander;assembly=Syncfusion.Expander.XForms"
     xmlns:viewModel="clr-namespace:EssentialUIKit.ViewModels.Dashboard"
     x:Name="stockOverviewPage"
     NavigationPage.HasNavigationBar="False"
@@ -107,14 +106,10 @@
                                 BorderWidth="2"
                                 HasShadow="True">
 
-                                <expander:SfExpander
+                                <Expander
                                     x:Name="expander"
-                                    AnimationDuration="350"
-                                    AnimationEasing="Linear"
-                                    HeaderBackgroundColor="Transparent"
-                                    HeaderIconPosition="None"
                                     IsExpanded="{Binding IsExpandable}">
-                                    <expander:SfExpander.Header>
+                                    <Expander.Header>
                                         <Grid Padding="16" Margin="2">
 
                                             <Grid.RowDefinitions>
@@ -169,9 +164,9 @@
                                                 Text="{Binding SubCategoryValue}"
                                                 TextColor="{DynamicResource Gray-800}" />
                                         </Grid>
-                                    </expander:SfExpander.Header>
+                                    </Expander.Header>
 
-                                    <expander:SfExpander.Content>
+                                    <Expander.Content>
                                         <StackLayout BackgroundColor="{StaticResource Gray-White}" Spacing="8">
 
                                             <BoxView HeightRequest="1" Color="{DynamicResource Gray-200}" />
@@ -281,15 +276,15 @@
                                             </chart:SfChart>
 
                                         </StackLayout>
-                                    </expander:SfExpander.Content>
-                                    <expander:SfExpander.Behaviors>
+                                    </Expander.Content>
+                                    <Expander.Behaviors>
                                         <behavior:ExpanderCommandBehavior
                                             ChildElement="{Binding Source={x:Reference stackLayout}}"
                                             Command="{Binding BindingContext.SelectionCommand, Source={x:Reference stockOverviewPage}}"
                                             CommandParameter="{Binding .}" />
-                                    </expander:SfExpander.Behaviors>
+                                    </Expander.Behaviors>
 
-                                </expander:SfExpander>
+                                </Expander>
 
                             </controls:CustomShadowFrame>
 
